add condition on observers for testing and fix some tests